[gd_scene load_steps=3 format=3 uid="uid://df7dtorljgf4p"]

[ext_resource type="Script" uid="uid://n2k4wsfc3mr5" path="res://scene/environement/inventory_ui.gd" id="1_5v8q7"]
[ext_resource type="FontFile" uid="uid://ba8xjii1dt2kh" path="res://ART/DialogBox/Font/Grenze_Gotisch/GrenzeGotisch-VariableFont_wght.ttf" id="2_rsfft"]

[node name="InventoryUI" type="CanvasLayer"]
script = ExtResource("1_5v8q7")

[node name="Panel" type="Panel" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ContextMenu" type="Panel" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="ContextMenu"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Button" type="Button" parent="ContextMenu/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_rsfft")
theme_override_font_sizes/font_size = 20
text = "Use"

[node name="Button2" type="Button" parent="ContextMenu/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_rsfft")
theme_override_font_sizes/font_size = 20
text = "Drop"

[node name="ButtonUse" type="Panel" parent="."]
offset_left = 1160.0
offset_top = 558.0
offset_right = 1200.0
offset_bottom = 598.0

[node name="VBoxContainer" type="VBoxContainer" parent="ButtonUse"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="pressed" from="ContextMenu/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="ContextMenu/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
